extending thz sources

--- a/expe.tex
+++ b/expe.tex
@@ -1,3 +1,4 @@
+\input{thztech}
 \section{Terahertz time-domain spectroscopy}
 \subsection{Overview of the method}%{{{
 The numerical data could be in some cases corroborated by experimental measurement using the \textit{time-domain terahertz spectroscopy} (TDTS) in our laboratory. 
@@ -86,7 +87,7 @@ from the numerically predicted results, which were moreover sensitive to subtle 
 %}}}
 
 The samples were manufactured by our group or by one of the collaborating groups, by different techniques which are discussed here. 
-\subsection{Optical determination of microparticle statistics}
+\section{Fabrication of the titanium dioxide microspheres}
 \paragraph{Spray-dry process}%{{{
 Rutile (TiO$_{2}$) was ground to a powder of sub-microscopic particles. 
 A suspension of these nanoparticles in ethanol was sprayed into flame. The average size of particles was determined by the solid concentration in the suspension, by feed rate and by gas flow.It immediately formed spherical droplets, which dried up and sintered in the hot air.  
@@ -155,7 +156,7 @@ With the acoustic power and frequency correctly adjusted, the particles formed a
 The amount of particles in one batch was limited to ca. 10--20 mm$^{3}$, otherwise the sieve would be covered with a layer too thick, which could not be efficiently lifted by the acoustic pressure.
 It could however be remedied by tilting the apparatus. With a tilt of 5--10 degrees, the bulk of particles then accumulated near one side, leaving most of the sieve surface free for sieving the moving fraction of particles. According to the small amount of particles required for the terahertz spectroscopy measurements, it is however advisable to sort a batch in order of 1--3 mm$^{3}$.
 %}}}
-\subsection{Optical determination of microparticle statistics}
+\section{Optical determination of microparticle statistics}
 %\paragraph{}%{{{
 \begin{figure}[ht] \caption{\textbf{a)} A section of a microphotograph of sample before sieving, \textbf{b)} the corresponding identification of particles in ImageJ} \label{fg_sievingstats} \centering 
 \textbf{a)}\includegraphics[height=5cm]{img/technology/imagej_photo.pdf}
@@ -169,7 +170,7 @@ We developed a numerical method to measure the histogram of the particle size di
 %}}}
 
 \subsection{Cutting of dielectric bars}%{{{ ===========================TODO
-Dielectric or metallic structures can be made by micromachining a thin polished slab of the given material. Metamaterials designed to operate around 1 THz, which corresponds to the free-space wavelength of 0.3 mm, have their unit cells of a similar size or less, and the finest features are usually an order of magnitude smaller. 
+Dielectric or metallic structures can be made by micromachining a thin polished slab of the given material. For instance, metamaterials designed to operate around 1 THz, which corresponds to the free-space wavelength of 0.3 mm, have their unit cells of a similar size or less, and the finest features are usually an order of magnitude smaller. 
 
 One thus faces a technologically challenging task of writing a structure with 10--30 $\upmu$m resolution into a slab of a similar thickness. If the slab is made of a dielectric, it is usually very brittle and sensitive to breaking due to thermal stresses. Metallic slab is  
 % In the following section, the properties of periodic dielectric rods are discussed. 
