--- a/fdphd.bib
+++ b/fdphd.bib
@@ -794,8 +794,8 @@ lts.fzu.cz/pdf/d-js.pdf
 
 /*}}}*/
 
-% == THz technology ==
-@article{lee2008book,/*{{{*/
+% == THz technology == /*{{{*/
+@article{lee2008book,
   title={Principles of terahertz science and technology},
   author={Lee,Yun-Shik},
   journal={NY: Springer},
