extending thz sources II

--- a/expe.tex
+++ b/expe.tex
@@ -22,8 +22,11 @@ with metallisation on one side forming a dense array of thin metallic wires. The
 An impinging optical pulse with femtosecond duration excites charge carriers, and the charge stored in the interdigitated electrodes discharges through the illuminated surface % radius of optical focus?
 of the GaAs slab. To ensure the photocurrent flows only in the even gaps has only one direction, every second gap between the wires was covered with nonconductive opaque paint.
 
-The leading edge of the photocurrent emits radiation typically in the form of a subpicosecond, half-cycle peak of electric field, polarized perpendicular to the wires. 
-The emission efficiency can be improved when the leading edge is followed by similarly sharp falling edge of the current, again in the order of one picosecond. For this purpose one needs to select a material with a very short lifetime of carriers, but a relatively high mobility thereof. Specially treated gallium arsenide slabs with lattice disordered either by ionizing radiation, or by growing at low temperature, was used. The resulting THz waveform then resembled a full-cycle with a sharp maximum and slightly dilated minimum. Spectral amplitude of the emitted pulse was sufficient for measurement roughly between 100 GHz and 3 THz.
+%% XXX
+	The leading edge of the photocurrent emits radiation typically in the form of a subpicosecond, half-cycle peak of electric field, polarized perpendicular to the wires. 
+	The resulting THz waveform then resembled a full-cycle with a sharp maximum and slightly dilated minimum. Spectral amplitude of the emitted pulse was sufficient for measurement roughly between 100 GHz and 3 THz.
+%% XXX
+
 % TODO figure of the pulse and the spectrum
 
 %}}}
