skeleton of thz sources

--- a/appendices.tex
+++ b/appendices.tex
@@ -77,6 +77,7 @@ $\kk$ 		& Wave vector in homogeneous medium\\
 $\KK$ 		& Bloch wave vector in periodic medium\\
 $\epsr$ 	& Relative dielectric permittivity\\
 $e$ 		& 2.718\ldots\\
+$h$ 		& Planck constant, $6.626\cdot 10^{-34}$ J s\\
 $\mathcal F$ 		& Fourier transform\\
  \bottomrule
  \end{tabular} \end{table}
