--- a/fdphd.bib
+++ b/fdphd.bib
@@ -202,7 +202,7 @@
   year={2013},
   school={Charles University, Prague}
 }
-@phdthesis{nemec2006,
+@phdthesis{nemec2006phd,
   title={Time-resolved terahertz spectroscopy applied to the investigation of magnetic materials and photonic structures },
   author={Němec, Hynek},
   year={2006},
