update nonlin thz sources

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -821,6 +821,16 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2012},
   publisher={IOP Publishing}
 }
+@article{han2000use,
+  title={Use of the organic crystal DAST for terahertz beam applications},
+  author={Han, PY and Tani, M and Pan, F and Zhang, X-C},
+  journal={Optics Letters},
+  volume={25},
+  number={9},
+  pages={675--677},
+  year={2000},
+  publisher={Optical Society of America}
+}
 /*}}}*/
 
 % == Simulations ==
