--- a/expe.tex
+++ b/expe.tex
@@ -14,9 +14,7 @@ The reflection could not be directly measured in the setup described, but at the
 % TODO laser equipment
 A vital component of the TDTS setup is a source of ultrashort optical pulses. 
 We used \textit{Coherent Mira} titanium-sapphire femtosecond oscillator with mean power of 0.5 W, central wavelength 810 nm, and a pulse duration under 70 fs.  %% TODO verify
-The repetition rate was 70 MHz, giving the pulse energy of roughly 7 nJ, sufficient to induce transient photoconductivity.
-
-The optical pulses were converted to the THz range by \textit{interdigitated} emitter, which consisted of a gallium arsenide slab % thickness?, material?
+The repetition rate was 70 MHz, giving the pulse energy of roughly 7 nJ, sufficient to induce transient photoconductivity in the interdigitated emitter, which consisted of a gallium arsenide slab % thickness?, material?
 with metallisation on one side forming a dense array of thin metallic wires. The voltage between the odd and even wires was 15-20 V, and was modulated in time to increase the noise-resistance of the detection system as described below.
 
 An impinging optical pulse with femtosecond duration excites charge carriers, and the charge stored in the interdigitated electrodes discharges through the illuminated surface % radius of optical focus?
